Update Build TTYD OpenWrt22.03.5.yml

--- a/.github/workflows/Build TTYD OpenWrt22.03.5.yml
+++ b/.github/workflows/Build TTYD OpenWrt22.03.5.yml
@@ -4,7 +4,6 @@
 #
 name: "Auto compile ttyd with openwrt 22.03.5 sdk"
 
-# 修复权限问题
 permissions:
   contents: write
 
@@ -103,8 +102,6 @@ jobs:
             "package/feeds/packages/ttyd" \
             "package/feeds/packages/libwebsockets" \
             "package/feeds/packages/uhttpd" \
-            "package/feeds/packages/libubus" \
-            "package/feeds/packages/libblobmsg-json" \
             "package/feeds/luci/luci-app-ttyd" \
             "package/feeds/luci/luci-app-diskman" \
             "package/feeds/base/ttyd" \
@@ -208,6 +205,22 @@ jobs:
           else
             echo "⚠ 未找到 SDK 的 libjson-script 包，继续编译"
           fi
+          
+          # 查找 libubus
+          if find . -type d -name "libubus" | grep -q .; then
+            echo "✓ 找到 SDK 的 libubus 包"
+          else
+            echo "✗ 未找到 SDK 的 libubus 包"
+            exit 1
+          fi
+          
+          # 查找 libblobmsg-json
+          if find . -type d -name "libblobmsg-json" | grep -q .; then
+            echo "✓ 找到 SDK 的 libblobmsg-json 包"
+          else
+            echo "✗ 未找到 SDK 的 libblobmsg-json 包"
+            exit 1
+          fi
 
           # 查找 OpenSSL 包的实际位置
           echo "=== 查找 OpenSSL 包位置 ==="
@@ -242,7 +255,7 @@ jobs:
           # 基础依赖 - 使用 SDK 中的包
           echo "CONFIG_PACKAGE_libuv=m" >> .config
           echo "CONFIG_PACKAGE_libubox=m" >> .config
-          echo "CONFIG_PACKAGE_libjson-script=m" >> .config
+          # 注意：有些 SDK 可能没有单独的 libjson-script 包，它可能被集成到其他包中
           echo "CONFIG_PACKAGE_libubus=m" >> .config
           echo "CONFIG_PACKAGE_libblobmsg-json=m" >> .config
           # 主要包
@@ -303,9 +316,18 @@ jobs:
           echo "✓ libubox 编译完成"
           echo ""
           
-          echo "----------- 开始编译 libjson-script (来自 SDK) ---------------"
-          make package/feeds/packages/libjson-script/compile -j$(nproc) V=sc
-          echo "✓ libjson-script 编译完成"
+          # 尝试编译 libjson-script - 使用动态查找
+          echo "----------- 尝试编译 libjson-script (来自 SDK) ---------------"
+          # 查找 libjson-script 包，使用更宽松的搜索
+          LIBJSON_SCRIPT_PATH=$(find . -type d \( -name "*json*script*" -o -name "*json-script*" \) | grep -E "(package/|feeds/)" | head -1)
+          if [ -n "$LIBJSON_SCRIPT_PATH" ]; then
+            echo "找到 libjson-script 路径: $LIBJSON_SCRIPT_PATH"
+            LIBJSON_SCRIPT_REL_PATH=${LIBJSON_SCRIPT_PATH#./}
+            echo "编译 libjson-script: $LIBJSON_SCRIPT_REL_PATH"
+            make $LIBJSON_SCRIPT_REL_PATH/compile -j$(nproc) V=sc && echo "✓ libjson-script 编译完成" || echo "⚠ libjson-script 编译失败，继续..."
+          else
+            echo "⚠ 未找到 libjson-script 包，跳过编译（可能已集成在 libubox 中）"
+          fi
           echo ""
           
           echo "----------- 开始编译 libubus (来自 SDK) ---------------"
@@ -379,7 +401,7 @@ jobs:
               echo "扫描目录: $src_dir"
 
               # 查找所有相关包，包括 SDK 依赖包、语言包和 uhttpd 相关包
-              for prefix in json-c libuv libubox libjson-script libubus libblobmsg-json libwebsockets ttyd luci-app-ttyd luci-app-diskman luci-i18n uhttpd; do
+              for prefix in json-c libuv libubox libjson-script libjson libubus libblobmsg-json libwebsockets ttyd luci-app-ttyd luci-app-diskman luci-i18n uhttpd; do
                   for file in "$src_dir"/"$prefix"*; do
                       [[ -f "$file" ]] || continue
 
@@ -413,7 +435,7 @@ jobs:
               done
           else
               echo "错误: 没有找到文件进行打包"
-              find bin/packages -name "*json-c*" -o -name "*libuv*" -o -name "*libubox*" -o -name "*libjson-script*" -o -name "*libubus*" -o -name "*libblobmsg-json*" -o -name "*ttyd*" -o -name "*libwebsockets*" -o -name "*luci-app-diskman*" -o -name "*luci-i18n*" -o -name "*uhttpd*" | head -40
+              find bin/packages -name "*json-c*" -o -name "*libuv*" -o -name "*libubox*" -o -name "*libjson*script*" -o -name "*libjson*" -o -name "*libubus*" -o -name "*libblobmsg-json*" -o -name "*ttyd*" -o -name "*libwebsockets*" -o -name "*luci-app-diskman*" -o -name "*luci-i18n*" -o -name "*uhttpd*" | head -40
               exit 1
           fi
 
@@ -504,7 +526,7 @@ jobs:
           echo "- **json-c**: JSON 解析库 (SDK 版本)" >> release_body.md
           echo "- **libuv**: 跨平台异步 I/O 库 (SDK 版本)" >> release_body.md
           echo "- **libubox**: OpenWrt 基础库 (SDK 版本)" >> release_body.md
-          echo "- **libjson-script**: JSON 脚本解析库 (SDK 版本)" >> release_body.md
+          echo "- **libjson-script**: JSON 脚本解析库 (SDK 版本，可能集成在 libubox 中)" >> release_body.md
           echo "- **libubus**: OpenWrt RPC 通信库 (SDK 版本)" >> release_body.md
           echo "- **libblobmsg-json**: libubus 的 JSON 数据处理库 (SDK 版本)" >> release_body.md
           echo "- **libwebsockets-full**: 完整的 WebSocket 库 (自定义版本)" >> release_body.md
@@ -549,7 +571,7 @@ jobs:
           echo "   - json-c (SDK 版本)" >> release_body.md
           echo "   - libuv (SDK 版本)" >> release_body.md
           echo "   - libubox (SDK 版本)" >> release_body.md
-          echo "   - libjson-script (SDK 版本)" >> release_body.md
+          echo "   - libjson-script (SDK 版本，如存在)" >> release_body.md
           echo "   - libubus (SDK 版本)" >> release_body.md
           echo "   - libblobmsg-json (SDK 版本)" >> release_body.md
           echo "   - libwebsockets-full (自定义版本)" >> release_body.md
